Fuse transpose into MatMul Implement Pow and constant scalar simplification

--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -188,7 +188,7 @@ if (MSVC)
   SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4100")
   if (NOT onnxruntime_USE_CUDA)
     SET (CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /Gw /GL")
-    SET (CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} /Gw /GL")
+    #SET (CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} /Gw /GL")
   endif()
   check_cxx_compiler_flag(-Qspectre HAS_QSPECTRE)
   if (HAS_QSPECTRE)
